<resources>

    <!-- Application -->
    <string name="app_name">Accessible Environment</string>

    <!-- Splash screen -->
    <string name="splash_title">First run</string>
    <!-- Text -->
    <string name="splash_tutorial_message">Добро пожаловать в приложение \'Доступная среда\'. Предлагаем Вам прослушать краткую инструкцию по работе с программой.</string>
    <!-- Buttons -->
    <string name="splash_tutorial_listen">ПРОСЛУШАТЬ</string>
    <string name="splash_tutorial_skip">ПРОПУСТИТЬ</string>

    <!-- Main screen -->
    <string name="main_title">Accessible Environment</string>

    <!-- Toast -->
    <string name="main_bluetooth_features_not_supported" translatable="false">Bluetooth or Bluetooth Low Energy is not supported on this device</string>


    <string name="main_notification_content_title">Сканирование маячков</string>
    <string name="main_notification_content_description">Сканирование маячков</string>

    <string name="main_bluetooth_not_supported">На вашем устройстве не поддерживается Bluetooth</string>
    <string name="main_bluetooth_le_not_supported">На вашем устройстве не поддерживается Bluetooth LE</string>
    <string name="main_bluetooth_adapter_error">Ошибка получения Bluetooth адаптера</string>
    <string name="main_location_permission_title">Приложению необходим доступ к местоположению</string>
    <string name="main_location_permission_message">Пожалуйста, предоставьте доступ к местоположению, для правильной работы приложения</string>

    <!-- Buttons -->
    <string name="main_turn_on">ВКЛЮЧИТЬ</string>
    <string name="main_turn_off">ВЫКЛЮЧИТЬ</string>
    <string name="main_route_button">НАВИГАЦИЯ</string>
    <string name="main_instruction">ИНСТРУКЦИЯ</string>

    <!-- Find route screen -->
    <string name="find_route_title">Find route</string>
    <string name="find_route_select_country">Country</string>
    <string name="find_route_select_city">City</string>
    <string name="find_route_select_building">Building</string>
    <string name="find_route_select_campus">Campus</string>
    <string name="find_route_find_route_button">Find route</string>

    <!-- Route screen -->
    <string name="route_title">Маршрут</string>
    <string name="route_notification_title">Найденные маячки</string>


    <string name="route_repeat_button">ПОВТОРИТЬ</string>
    <string name="main_about_us">О Нас</string>
    <string name="main_settings">Настройки</string>

    <!-- Settings screen -->
    <string name="setting_increase">УВЕЛИЧИТЬ</string>
    <string name="settings_decrease">УМЕНЬШИТЬ</string>
    <string name="settings_reset">СБРОСИТЬ</string>
    <string name="settings_save">Сохранить</string>

    <string-array name="instruction_array">
        <item>Вы слушаете первое сообщение из 6.При открытии приложения вы попадаете в главное меню, от сюда вы можете прослушать эту инструкцию, перейти к навигации или открыть настройки. </item>
        <item>Вы слушаете второе сообщение из 6.Для первого использования системы на любом объекте необходимо соединение с интернет, для дальнейшего использования соединение необязательно.</item>
        <item>Вы слушаете третье сообщение из 6.Если вы откроете меню навигации недалеко от объекта, оборудованного нашей системой, то в течение нескольких секунд ваше местоположение будет автоматически определено, о чем будет свидетельствовать надпись на первой кнопке на экране, далее вам нужно выбрать пункт назначения в соответствующем меню, кнопка для его вызова располагается следом за кнопкой выбора локации. После выбора пункта назначения, остаётся нажать кнопку "найти маршрут" и ждать голосовых подсказок.</item>
        <item>Вы слушаете четвертое сообщение из 6.В приложении предусмотрена функция прогулки, когда вы будете находиться в меню выбора маршрута, приложение будет сообщать вам ваше местоположение.</item>
        <item>Вы слушаете пятое сообщение из 6.В меню настроек вы можете регулировать инертность системы. В зависимости от вашей привычной скорости ходьбы и качества вашего устройства вам может потребоваться изменить этот параметр. При его увеличении чувствительность к сигналам снижается что приводит к возрастанию задержек при переключении между точками маршрута, и снижению вероятности ложного срабатывания. Если же уменьшить этот параметр, то вероятность ошибок возрастет, но уменьшится время реакции на изменение вашего местоположения.
Опытным путем мы подобрали значение по умолчанию, для вас более удобным может быть другое значение.</item>
        <item>Вы слушаете шестое сообщение из 6. Для выхода из любого меню воспользуйтесь стандартной кнопкой "назад"</item>

    </string-array>
    <!-- About us screen -->
    <string name="about_us_appname" translatable="false">Доступная среда</string>
    <string name="about_us_app_description" translatable="false">"Шестое чувство" - это система навигации внутри помещений для людей с ограниченными возможностями зрения. Проект создан командой Института компьютерных технологий и информационной безопасности Южного федерального университета:\n
        \nПлёнкин Антон Павлович.
        \nБекезин Сергей Александрович.
        \nМоскаленко Андрей Сергеевич.
        \nМихайлова Василиса Дмитриевнна.
    \n\nПочта: pljonkin@sfedu.ru
    \nСайт:  feel.sfedu.ru
    </string>


</resources>
