<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/find_route_content"
    tools:context=".ui.find_route.FindRouteScreen"
    tools:showIn="@layout/activity_find_route_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/find_route_country_selector"
            style="@style/FindRoute.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_route_select_country" />

        <TextView
            android:id="@+id/find_route_city_selector"
            style="@style/FindRoute.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_route_select_city" />

        <TextView
            android:id="@+id/find_route_building_selector"
            style="@style/FindRoute.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_route_select_building" />

        <TextView
            android:id="@+id/find_route_campus_selector"
            style="@style/FindRoute.Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/find_route_select_campus" />

    </LinearLayout>

    <Button
        android:id="@+id/find_route_find_route_button"
        android:layout_alignParentBottom="true"
        style="@style/FindRoute.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/find_route_find_route_button" />

</RelativeLayout>