<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        style="@style/SplashScreen.WelcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/splash_tutorial_message" />

    <Button
        android:id="@+id/splash_tutorial_start"
        style="@style/SplashScreen.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/splash_tutorial_listen" />

    <Button
        android:id="@+id/splash_tutorial_skip"
        style="@style/SplashScreen.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/splash_tutorial_skip" />

</LinearLayout>